Bug 111996 - clear command on query show an error message
Summary: clear command on query show an error message
Status: RESOLVED FIXED
Alias: None
Product: konversation
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Gentoo Packages Linux
: NOR normal
Target Milestone: ---
Assignee: Konversation Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2005-09-03 16:56 UTC by Victor Barba
Modified: 2006-01-07 06:36 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Prevents konversation from sending /clear command to server (691 bytes, patch)
2005-09-25 14:53 UTC, Lothar Braun
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Victor Barba 2005-09-03 16:56:41 UTC
Version:           0.18 #3016 (using KDE KDE 3.4.2)
Installed from:    Gentoo Packages
Compiler:          gcc version 3.4.4 (Gentoo 3.4.4, ssp-3.4.4-1.0, pie-8.7.8) 
OS:                Linux

when you put the /clear command on a query tab, the tab clears, but "clear Unknown command" is showed.
Comment 1 Lothar Braun 2005-09-25 14:53:26 UTC
Created attachment 12699 [details]
Prevents konversation from sending /clear command to server
Comment 2 Eike Hein 2006-01-07 06:36:05 UTC
*** Bug has been marked as fixed ***.