Fix by Lothar Braun for clear command on query show an error message.

BUG:111996

svn path=/trunk/extragear/network/konversation/; revision=463821